--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,7 +2,7 @@
 // Colours //
 // ============================================================ //
 
-$primary: #F03838;
+$primary: #F3610F;
 $secondary: #303030;
 $background: #FEFEFE;
 
